# lwlib

./: .gitignore  CMakeLists.txt
cmake/: clang-cxx-dev-tools.cmake
include/lwlib/: Analyzer.hpp  Attack.hpp  Character.hpp  FastDevice.hpp  Modifier.hpp  TurnAction.hpp
include/lwlib/internal/: macro.h  types.h
src/: Analyzer.cpp  Attack.cpp  Character.cpp  FastDevice.cpp  Modifier.cpp  TurnAction.cpp
src/opencl/: dmgcalc.cl  types.cl
test/: CMakeLists.txt  lw_opencl_test_types_compatibility.cpp
